--- a/.github/workflows/auto-ozip-decrypt.yml
+++ b/.github/workflows/auto-ozip-decrypt.yml
@@ -16,12 +16,12 @@ on:
 env:
   FIRMWARE_LINK: https://assorted.downloads.oppo.com/firmware/CPH1803/CPH1803EX_11_OTA_0330_all_QRtdIUfjHPUB.ozip #edit link here...
   FIRMWARE_NAME: CPH1803EX_11_OTA_0330_all_QRtdIUfjHPUB.ozip  #edit file name here, you can find the name of file from link itself...
-  FINAL_ZIP_NAME: THE_NAME_OF_ZIP_YOU_WANT.zip #This will be the name of final zip which will be uploaded. You can leave it unchanged.
+  FINAL_ZIP_NAME: CPH1803.zip #This will be the name of final zip which will be uploaded. You can leave it unchanged.
   TZ: Asia/Kolkata
 
 jobs:
   build:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
 
     steps:
        - name: Checkout
